# AndroidScreencast

./: README.md
client/: settings.gradle.kts
client/app/: build.gradle.kts
client/app/src/main/: AndroidManifest.xml
client/app/src/main/cpp/: AndroidMediaSink.cpp  AndroidRTSPClient.cpp  CMakeLists.txt  ScreencastClient.cpp  version.script
client/app/src/main/cpp/include/: AndroidMediaSink.h  AndroidRTSPClient.h  FinalAction.h  MediaCodecBuffer.h
client/app/src/main/res/layout/: activity_main.xml  activity_video_play.xml
client/app/src/main/res/values/: themes.xml
client/gradle/: libs.versions.toml
client/gradle/wrapper/: gradle-wrapper.properties
live555/: live555.diff
live555/live/: CMakeLists.txt
live555/live/liveMedia/: GenericMediaServer.cpp  H264or5VideoStreamFramer.cpp  MPEGVideoStreamFramer.cpp  MultiFramedRTPSink.cpp  RTCP.cpp  RTPInterface.cpp  RTSPServer.cpp  StreamParser.cpp
server/: settings.gradle.kts
server/app/: build.gradle.kts
server/app/src/main/: AndroidManifest.xml
server/app/src/main/cpp/: AndroidUsageEnvironment.cpp  Backtrace.cpp  CMakeLists.txt  Encoder.cpp  H265LiveVideoServerMediaSubsession.cpp  LiveVideoSource.cpp  ScreencastServer.cpp  version.script
server/app/src/main/cpp/cmake/: live555.cmake
server/app/src/main/cpp/include/: AndroidUsageEnvironment.h  Backtrace.h  Encoder.h  H265LiveVideoServerMediaSubsession.h  LiveVideoSource.h
server/app/src/main/res/layout/: activity_main.xml
server/gradle/: libs.versions.toml
server/gradle/wrapper/: gradle-wrapper.properties
(+19 files in other folders)
